<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground2">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutBodyPart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/body_part_label"
        android:layout_marginTop="12dp"
        android:layout_marginHorizontal="20dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
        app:startIconDrawable="@drawable/ic_body"
        app:layout_constraintTop_toTopOf="parent">

        <AutoCompleteTextView
            android:id="@+id/spinnerBodyPart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutLevel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/level_label"
        android:layout_marginTop="12dp"
        android:layout_marginHorizontal="20dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutBodyPart"
        app:startIconDrawable="@drawable/ic_heart">

        <AutoCompleteTextView
            android:id="@+id/spinnerLevel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switchEquipment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:text="@string/workout_tools"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
        android:background="@drawable/bg_switch"
        android:drawableStart="@drawable/ic_tools"
        android:drawablePadding="16dp"
        android:paddingHorizontal="12dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutLevel" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginHorizontal="20dp"
        android:text="@string/submit"
        app:layout_constraintTop_toBottomOf="@+id/switchEquipment" />
</androidx.constraintlayout.widget.ConstraintLayout>